# vrc-studio

./: .gitignore  TODO  beta-registry.json  index.html  package.json  scan_db.py  shell.nix  test  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/: launch.json
.superpowers/brainstorm/: all-pickers-v2.html  all-pickers.html  picker-designs.html  picker-inventory.html  scope.html  sdk-surface.html  tsx-approach.html
docs/: 2026-04-29-polished-qa.md  2026-04-29-shop-inventory.md  2026-04-29-unity-custom.md  2026-04-29-vcs-git-github.md  2026-04-29-vrc-studio-core.md  2026-04-29-vrc-studio-packages.md  2026-04-29-vrc-studio-projects.md  plan.md  plansss.md
docs/mockups/: carousel.html  design-full.html  wizard.html
scripts/: debug-screenshot.mjs  migrate-i18n.js  take-screenshot.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: booth-auth.json  default.json  ripper-auth.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app_settings.rs  booth_deps.rs  build_monitor.rs  cart.rs  collections.rs  conflicts.rs  inventory.rs  journal.rs  mod.rs  multi_avatar.rs  packages.rs  projects.rs  sandbox.rs  shop.rs  terminal.rs  tools.rs  tracker.rs  updates.rs  vcs.rs  vrchat_photos.rs
src-tauri/src/db/: mod.rs  packages_repo.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_custom_package_assets.sql  003_shop_inventory.sql  004_inventory_images.sql  005_compression.sql  006_vcs.sql  007_project_screenshots.sql  008_journal.sql  009_tracker.sql  010_inventory_v2.sql  011_item_custom_images.sql  012_folder_v2.sql  013_schema_repair.sql  014_folder_sort_order.sql  015_folder_emoji.sql  016_folder_image_fill.sql  017_shop_cart.sql  018_shop_collections.sql  019_collection_description.sql  020_tracker_v2.sql  021_multi_avatar.sql  022_variant_custom_image.sql  023_folder_fill_rename.sql  024_early_imports.sql  025_early_import_sub_zip.sql  026_project_cover_image.sql  027_project_folders.sql  028_project_sort_order.sql  029_project_folder_image.sql  030_collections_folders.sql  031_tools.sql  032_beta_subscriptions.sql
src-tauri/src/models/: mod.rs
src-tauri/src/services/: auth_store.rs  booth.rs  booth_webview.rs  dependency_resolver.rs  discord_assets.rs  discord_auth.rs  discord_rpc.rs  downloader.rs  git_service.rs  github_oauth.rs  mod.rs  package_builder.rs  prefab_parser.rs  project_creator.rs  riperstore.rs  ripper_webview.rs  tracker_service.rs  tray.rs  unity_detector.rs  vcc_reader.rs  vpm.rs  vpm_client.rs
src-tauri/src/tests/: commands_test.rs  db_test.rs  error_test.rs  updates_test.rs
src-tauri/src/tools/: mod.rs  sdk_server.rs
src/components/: ErrorBoundary.tsx  GetStarted.tsx  SplashScreen.tsx  SplashScreenCarousel.tsx
src/hooks/: useBoothDebug.ts  useBoothStatus.ts  useDebouncedValue.ts  useDiscordRpc.ts  useDownloadProgress.ts  useEmbeddedSdk.ts  useInventory.ts  usePackages.ts  useProjectEvents.ts  useRipperStatus.ts  (+5 more)
tools/: build.py  registry.json
tools-registry/: registry.json
webpage/: index.html  package.json
(+248 files in other folders)
