[package]
name = "vrc-studio"
version = "0.0.18"
edition = "2021"

[lib]
name = "vrc_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "rustls-tls"], default-features = false }
semver  = { version = "1", features = ["serde"] }
uuid    = { version = "1", features = ["v4"] }
zip     = "2"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
tar     = "0.4"
walkdir = "2"
keyring = "2"
scraper = "0.19"
urlencoding = "2"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.1.9"
futures = "0.3.32"
ed25519-dalek    = { version = "2", features = ["digest"] }
base64           = "0.22"
tauri-plugin-notification = "2"
anyhow = "1.0.102"
tracing = "0.1.44"
sha2 = "0.10"
sysinfo = { version = "0.39.1", features = ["system"] }
open = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
regex = "1"
unrar = "0.5"
toml = "0.8"
discord-rich-presence = "1.1.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
